remove waybar alignment bug due to 1 pixel border

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -61,6 +61,10 @@ window#waybar {
   background-color: @base02;
 }
 
+#tray menuitem {
+  border: none;
+}
+
 #tray menuitem:hover {
   color: @base3;
   font-weight: bold;
